[chore][deploy] Add listen host config for docker compose and ansible.
Signed-off-by: Ketor <d.ketor@gmail.com>

--- a/roles/dingo_store/templates/start-store.sh.j2
+++ b/roles/dingo_store/templates/start-store.sh.j2
@@ -20,7 +20,9 @@ BASE_DIR=$(dirname $(cd $(dirname $0); pwd))
 DIST_DIR=$BASE_DIR/dist
 
 SERVER_HOST={{ inventory_hostname | default('127.0.0.1') }}
+SERVER_LISTEN_HOST={{ inventory_hostname | default('127.0.0.1') }}
 RAFT_HOST={{ inventory_hostname | default('127.0.0.1') }}
+RAFT_LISTEN_HOST={{ inventory_hostname | default('127.0.0.1') }}
 COOR_SRV_PEERS={{ dingo_store_store_exchange_connection_list }}
 STORE_NUM={{ store_num | int }}
 RAFT_START_PORT={{ dingo_store_raft_port | default(20101) }}
