--- a/roles/scaling_in_dingo/templates/start-coordinator.sh.j2
+++ b/roles/scaling_in_dingo/templates/start-coordinator.sh.j2
@@ -26,7 +26,9 @@ if [ ! -d "$DIST_DIR" ]; then
 fi
 
 SERVER_HOST={{ inventory_hostname | default('127.0.0.1') }}
+SERVER_LISTEN_HOST={{ inventory_hostname | default('127.0.0.1') }}
 RAFT_HOST={{ inventory_hostname | default('127.0.0.1') }}
+RAFT_LISTEN_HOST={{ inventory_hostname | default('127.0.0.1') }}
 COORDINATOR_RAFT_START_PORT={{ dingo_store_coordinator_raft_port }}
 COORDINATOR_SERVER_START_PORT={{ dingo_store_coordinator_exchange_port }}
 COOR_RAFT_PEERS={{ dingo_coordinator_raft_connection_list }}
