--- a/roles/dingo_store/templates/start-coordinator.sh.j2
+++ b/roles/dingo_store/templates/start-coordinator.sh.j2
@@ -4,7 +4,6 @@ mydir="${BASH_SOURCE%/*}"
 if [[ ! -d "$mydir" ]]; then mydir="$PWD"; fi
 . $mydir/shflags
 
-
 DEFINE_string role 'coordinator' 'server role'
 DEFINE_boolean clean_db 1 'clean db'
 DEFINE_boolean clean_raft 1 'clean raft'
@@ -15,11 +14,8 @@ DEFINE_boolean replace_conf 0 'replace conf'
 FLAGS "$@" || exit 1
 eval set -- "${FLAGS_ARGV}"
 
-
 BASE_DIR=$(dirname $(cd $(dirname $0); pwd))
 DIST_DIR=$BASE_DIR/dist
-
-
 
 if [ ! -d "$DIST_DIR" ]; then
   mkdir "$DIST_DIR"
@@ -35,6 +31,7 @@ COOR_RAFT_PEERS={{ dingo_coordinator_raft_connection_list }}
 COOR_SRV_PEERS={{ dingo_store_store_exchange_connection_list }}
 INSTANCE_START_ID={{ 1000 | int +  groups['coordinator'].index(inventory_hostname) | int }}
 TMP_COORDINATOR_SERVICES=$BASE_DIR/build/bin/coor_list
+DEFAULT_REPLICA_NUM=3
 
 source $mydir/deploy_func.sh
 
@@ -44,10 +41,7 @@ deploy() {
   
   program_dir=$BASE_DIR/dist/${FLAGS_role}1
   deploy_store ${FLAGS_role} $BASE_DIR $program_dir $COORDINATOR_SERVER_START_PORT $COORDINATOR_RAFT_START_PORT $INSTANCE_START_ID ${COOR_RAFT_PEERS} ${TMP_COORDINATOR_SERVICES}
-
 }
-
-
 
 start() {
   #FLAGS_role=${FLAGS_role}
@@ -58,7 +52,6 @@ start() {
   start_program ${FLAGS_role} ${program_dir}    	
 }
 
-
 clean() 
 {
   i=1
@@ -67,9 +60,6 @@ clean()
   sleep 1
   echo "rm -rf ${program_dir} files"
 }
-
-
-
 
 stop() 
 {
@@ -92,7 +82,6 @@ if [ $# -lt 1 ];then
         usage
         exit
 fi
-
 
 if [ "$1" = "deploy" ];then
         deploy
