--- a/roles/dingo/templates/start-executor.sh.j2
+++ b/roles/dingo/templates/start-executor.sh.j2
@@ -20,7 +20,7 @@ ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && pwd )"
 JAR_PATH=$(find $ROOT -name dingo-executor-*.jar)
 STORE_JAR_PATH=$(find $ROOT -name dingo-store*.jar)
 NET_JAR_PATH=$(find $ROOT -name dingo-net-*.jar)
-JAVA_OPTS="-Xms1g -Xmx1g -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError"
+JAVA_OPTS="-Xms1g -Xmx1g -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError -javaagent:{{ dingo_home }}/libs/jmx_prometheus_javaagent-0.17.2.jar={{ jmx_prometheus_javaagent_port }}:{{ dingo_home }}/conf/jmx_config.yaml"
 
 nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
      -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
