--- a/roles/nginx/templates/default.conf.j2
+++ b/roles/nginx/templates/default.conf.j2
@@ -5,7 +5,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream monitorcluster {
-{% for host in groups['proxy'] %}
+{% for host in groups['web'] %}
     server {{ host }}:{{ dingo_monitor_backend_port }};
 {% endfor %}
 }
