--- a/roles/dingo/templates/executor-noldap.yaml.j2
+++ b/roles/dingo/templates/executor-noldap.yaml.j2
@@ -13,6 +13,11 @@ variable:
     autoIncrementCacheCount: {{ dingo_auto_increment_cache_count }}
     autoIncrementIncrement: 1
     autoIncrementOffset: 1
+    enableTableLock: false
+common:
+    scheduledCoreThreads: 16
+    lockCoreThreads: 0
+    globalCoreThreads: 0
 store:
     bufferSize: {{ dingo_executor_buffer_size }}
     bufferNumber: {{ dingo_executor_buffer_number }}
