--- a/roles/dingo/templates/start-executor.sh.j2
+++ b/roles/dingo/templates/start-executor.sh.j2
@@ -21,10 +21,20 @@ JAR_PATH=$(find $ROOT -name dingo-executor-*.jar)
 STORE_JAR_PATH=$(find $ROOT -name dingo-store*.jar)
 NET_JAR_PATH=$(find $ROOT -name dingo-net-*.jar)
 JAVA_OPTS="-Xms2g -Xmx2g -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError -javaagent:{{ dingo_home }}/libs/jmx_prometheus_javaagent-0.17.2.jar={{ jmx_prometheus_javaagent_port }}:{{ dingo_home }}/conf/jmx_config.yaml"
-
-nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
+if [{{is_license_support}}];then
+ LICENSE_JAR_PATH=$(find $ROOT -name license.jar)
+ nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
+      -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
+      -classpath ${JAR_PATH}:${NET_JAR_PATH}:${STORE_JAR_PATH}:${LICENSE_JAR_PATH}  \
+      io.dingodb.server.executor.Starter \
+      --config ${ROOT}/conf/executor.yaml \
+      > {{ dingo_log_path }}/executor.out &
+else
+ nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
      -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
-     -classpath ${JAR_PATH}:${NET_JAR_PATH}:${STORE_JAR_PATH}  \
+     -classpath ${JAR_PATH}:${NET_JAR_PATH}:${STORE_JAR_PATH} \
      io.dingodb.server.executor.Starter \
      --config ${ROOT}/conf/executor.yaml \
      > {{ dingo_log_path }}/executor.out &
+fi
+
