[chore][deploy]Add executor config and format code

--- a/roles/dingo/templates/executor.yaml.j2
+++ b/roles/dingo/templates/executor.yaml.j2
@@ -22,6 +22,7 @@ store:
     bufferSize: {{ dingo_executor_buffer_size }}
     bufferNumber: {{ dingo_executor_buffer_number }}
     fileSize: {{ dingo_executor_file_size }}
+    path: {{ dingo_home }}/localStore
 security:
     ldap:
         ldapHost: {{ openldap_server_ip }}
