[dingo-release] bump release version to dingo-v0.9.0

--- a/roles/dingo/templates/logback-executor.xml.j2
+++ b/roles/dingo/templates/logback-executor.xml.j2
@@ -25,7 +25,7 @@
     <!-- Maximum time for log storage -->
     <property name="log.maxHistory" value="7"/>
     <!-- Log storage location -->
-    <property name="log.filePath" value="${user.dir}"/>
+    <property name="log.filePath" value="{{ dingo_log_path }}"/>
     <!-- Display format of log -->
     <property name="log.pattern" value="%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level [%logger{36}:%line] - %msg%n"/>
     <!-- Maximum size of log file -->
