--- a/roles/dingo/templates/executor-noldap.yaml.j2
+++ b/roles/dingo/templates/executor-noldap.yaml.j2
@@ -13,7 +13,7 @@ variable:
     autoIncrementCacheCount: {{ dingo_auto_increment_cache_count }}
     autoIncrementIncrement: 1
     autoIncrementOffset: 1
-    enableTableLock: false
+    enableTableLock: true
 common:
     scheduledCoreThreads: 16
     lockCoreThreads: 0
