--- a/roles/dingo_store/templates/start-index.sh.j2
+++ b/roles/dingo_store/templates/start-index.sh.j2
@@ -18,9 +18,9 @@ BASE_DIR=$(dirname $(cd $(dirname $0); pwd))
 DIST_DIR=$BASE_DIR/dist
 
 SERVER_HOST={{ inventory_hostname | default('127.0.0.1') }}
-SERVER_LISTEN_HOST={{ inventory_hostname | default('127.0.0.1') }}
+SERVER_LISTEN_HOST={{ server_listen_host | default('0.0.0.0') }}
 RAFT_HOST={{ inventory_hostname | default('127.0.0.1') }}
-RAFT_LISTEN_HOST={{ inventory_hostname | default('127.0.0.1') }}
+RAFT_LISTEN_HOST={{ raft_listen_host | default('0.0.0.0') }}
 COOR_SRV_PEERS={{ dingo_store_store_exchange_connection_list }}
 STORE_NUM={{ index_num | int }}
 RAFT_START_PORT={{ dingo_store_index_raft_port | default(21101) }}
@@ -29,6 +29,7 @@ DISK_LIST_STR="{{ hostvars[inventory_hostname]['disk']  | default('${DIST_DIR}')
 eval DISK_LIST=($DISK_LIST_STR)
 TMP_COORDINATOR_SERVICES=$BASE_DIR/build/bin/coor_list
 DEFAULT_REPLICA_NUM={{ install_dingo_store_default_replica_num }}
+DISKANN_SERVER_HOST={{ dingo_diskann_host | default('127.0.0.1') }}
 DISKANN_SERVER_START_PORT=$(({{ dingo_store_diskann_exchange_port }} - 1))
 if [ ! -d "$DIST_DIR" ]; then
   mkdir "$DIST_DIR"
